--- a/app/less/web/hotels.less
+++ b/app/less/web/hotels.less
@@ -257,7 +257,7 @@
 }
 
 .popular-hotel-list {
-  .hotem-item {
+  .hotel-item {
     .column {
       &.hotel-info {
         width: 315px !important
